Basic design implementation
Basic design of the app is implemented.

--- a/ChooseGoodFoodAngular/src/app/comparison-page/comparison-page.component.html
+++ b/ChooseGoodFoodAngular/src/app/comparison-page/comparison-page.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <div class="compare-box">
       <h2 class="dish-name">{{ restaurantDish.name }}</h2>
       <h2 class="dish-name">{{ homeDish.name }}</h2>
@@ -20,4 +20,4 @@
       <p>{{ restaurantDish.glycemicIndex }}</p>
       <p>{{ homeDish.glycemicIndex }}</p>
     </div>
-  </div>
+</div>
