--- a/ChooseGoodFoodAngular/src/app/dish-card/dish-card.component.css
+++ b/ChooseGoodFoodAngular/src/app/dish-card/dish-card.component.css
@@ -1,4 +1,4 @@
-.container {
+  .container {
     display: flex;
     justify-content: space-between;
     background-color: #aaaaaa;
@@ -9,8 +9,7 @@
   .image-box {
     width: 80px;
     height: 80px;
-    margin: 10px 10px 10px 10px;
-    background-color: #777777;
+    margin: 10px;
   }
   
   .buttons-box {
@@ -27,7 +26,8 @@
   
   .content-box {
     margin-top: 10px;
-    margin-left: -20px;
+    flex-basis: 90%;
+    font-family: sans-serif;
   }
   
   .dish-name {
