--- a/ChooseGoodFoodAngular/src/app/dish-details/dish-details.component.css
+++ b/ChooseGoodFoodAngular/src/app/dish-details/dish-details.component.css
@@ -1,13 +1,18 @@
-.container {
-    margin: 20px;
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   .image-box {
     margin: 15px;
     width: 100%;
-    max-width: 380px;
-    height: 380px;
-    background-color: #777777;
+    max-width: 390px;
+  }
+
+  .credits {
+    font-size: 10px;
   }
   
   .dish-name {
@@ -16,7 +21,7 @@
   }
   
   .content-box {
-    margin: 30px;
+    width: 400px;
   }
   
   .text {
