--- a/ChooseGoodFoodAngular/src/app/dish-details/dish-details.component.html
+++ b/ChooseGoodFoodAngular/src/app/dish-details/dish-details.component.html
@@ -1,7 +1,9 @@
-<div>
-    <div class="image-box"></div>
+<div class="container">
+    <div class="image-box">
+      <p class="credits">{{ dish.imageCredits }}</p>
+      <img [src]="dish.imageUrl" width="380px">
+    </div>
     <h2 class="dish-name">{{ dish.name }}</h2>
-    <div class="container">
       <div class="content-box">
         <p class="text">Składniki:</p>
         
@@ -22,7 +24,6 @@
           <p class="text">{{ dish.portion }} g</p>
         </div>
       </div>
-    </div>
     <div class="button">
       <button *ngIf="isAlternativeDetailsPage === true" (click)="navigateToComparison()">Porównaj</button>
       <button *ngIf="isAlternativeDetailsPage === false" (click)="navigateToAlternativeDetails()">Pokaż zamiennik</button>
