--- a/ChooseGoodFoodAngular/src/app/dish-details/dish-details.component.html
+++ b/ChooseGoodFoodAngular/src/app/dish-details/dish-details.component.html
@@ -2,6 +2,7 @@
     <div class="image-box">
       <p class="credits">{{ dish.imageCredits }}</p>
       <img [src]="dish.imageUrl" width="380px">
+      <p style="font-size: 7px;">Zdjęcie jest jedynie obrazem poglądowym, nie jest dokładnym odzwierciedleniem opisywanego dania.</p>
     </div>
     <h2 class="dish-name">{{ dish.name }}</h2>
       <div class="content-box">
