--- a/ChooseGoodFoodAngular/src/app/dish-card/dish-card.component.html
+++ b/ChooseGoodFoodAngular/src/app/dish-card/dish-card.component.html
@@ -6,7 +6,11 @@
       <h2 class="dish-name">{{ restaurantDish.name }}</h2>
     </div>
     <div class="buttons-box">
-      <button>star_outline</button>
-      <button>info_outline</button>
+      <button title="Icon by Business and Online Icons on freeicons.io">
+        <img src="../assets/icons/star.svg">
+      </button>
+      <button title="Icon by Business and Online Icons on freeicons.io">
+        <img src="../assets/icons/info.svg">
+      </button>
     </div>
 </div>
