--- a/ChooseGoodFoodAngular/src/app/dish-details/dish-details.component.html
+++ b/ChooseGoodFoodAngular/src/app/dish-details/dish-details.component.html
@@ -4,29 +4,33 @@
       <img [src]="dish.imageUrl" width="380px">
       <p style="font-size: 7px;">Zdjęcie jest jedynie obrazem poglądowym, nie jest dokładnym odzwierciedleniem opisywanego dania.</p>
     </div>
-    <h2 class="dish-name">{{ dish.name }}</h2>
-      <div class="content-box">
-        <p class="text">Składniki:</p>
+    <div class="content-box">
+      <h2 class="dish-name">{{ dish.name }}</h2>
+        <div class="ingredients-box">
+          <p class="text">Składniki:</p>
+        </div>
         
-        <div class="content-line">
-          <p class="text">Cena dania:</p>
-          <p class="text">{{ dish.price }} zł</p>
+        <div class="info-box">
+          <div class="content-line">
+            <p class="text">Cena dania:</p>
+            <p class="text">{{ dish.price }} zł</p>
+          </div>
+          <div class="content-line">
+            <p class="text">Wartość kaloryczna:</p>
+            <p class="text">{{ dish.calories }} kcal</p>
+          </div>
+          <div class="content-line">
+            <p class="text">Indeks glikemiczny:</p>
+            <p class="text">{{ dish.glycemicIndex }}</p>
+          </div>
+          <div class="content-line">
+            <p class="text">Porcja: </p>
+            <p class="text">{{ dish.portion }} g</p>
+          </div>
         </div>
-        <div class="content-line">
-          <p class="text">Wartość kaloryczna:</p>
-          <p class="text">{{ dish.calories }} kcal</p>
+        <div class="button">
+          <button appButton *ngIf="isAlternativeDetailsPage === true" (click)="navigateToComparison()">Porównaj</button>
+          <button appButton *ngIf="isAlternativeDetailsPage === false" (click)="navigateToAlternativeDetails()">Pokaż zamiennik</button>
         </div>
-        <div class="content-line">
-          <p class="text">Indeks glikemiczny:</p>
-          <p class="text">{{ dish.glycemicIndex }}</p>
-        </div>
-        <div class="content-line">
-          <p class="text">Porcja: </p>
-          <p class="text">{{ dish.portion }} g</p>
-        </div>
-      </div>
-    <div class="button">
-      <button *ngIf="isAlternativeDetailsPage === true" (click)="navigateToComparison()">Porównaj</button>
-      <button *ngIf="isAlternativeDetailsPage === false" (click)="navigateToAlternativeDetails()">Pokaż zamiennik</button>
     </div>
   </div>
