--- a/ChooseGoodFoodAngular/src/app/login/login.component.html
+++ b/ChooseGoodFoodAngular/src/app/login/login.component.html
@@ -2,14 +2,14 @@
     <h1>Choose Good Food</h1>
     <div class="input">
         <label>E-mail</label>
-        <input type="email" #email>
+        <input appInput type="email" #email>
     </div>
     <div class="input">
         <label>Hasło</label>
-        <input type="password" #password>
+        <input appInput type="password" #password>
     </div>
     <div class="btn-box">
-        <button (click)="onLogin(email.value, password.value)">Zaloguj się</button>
-        <button (click)="onRegister(email.value, password.value)">Zarejestruj się</button>
+        <button appButton (click)="onLogin(email.value, password.value)">Zaloguj się</button>
+        <button appButton (click)="onRegister(email.value, password.value)">Zarejestruj się</button>
     </div>
 </div>
