--- a/ChooseGoodFoodAngular/src/app/comparison-page/comparison-page.component.css
+++ b/ChooseGoodFoodAngular/src/app/comparison-page/comparison-page.component.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     align-items: center;
+    color: purple;
 }
 
 .compare-box {
@@ -11,6 +12,17 @@
     width: 40%;
 }
 
-p {
+p, h2 {
+    width: 50%;
+    height: 20px;
+    border: 3px solid purple;
     text-align: center;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+h2 {
+    height: fit-content;
+    margin: 5px;
 }
