--- a/ChooseGoodFoodAngular/src/app/login/login.component.css
+++ b/ChooseGoodFoodAngular/src/app/login/login.component.css
@@ -5,6 +5,7 @@
     justify-content: center;
     height: 100vh;
     font-family: 'Inter';
+    color: purple;
 }
 
 h1 {
@@ -16,6 +17,11 @@ h1 {
     display: flex;
     flex-direction: column;
     margin: 10px 0;
+}
+
+.input input{
+    border: none;
+    border-bottom: 1px solid purple;
 }
 
 .btn-box {
