--- a/ChooseGoodFoodAngular/src/app/comparison-page/comparison-page.component.css
+++ b/ChooseGoodFoodAngular/src/app/comparison-page/comparison-page.component.css
@@ -9,10 +9,10 @@
 .compare-box {
     display: flex;
     justify-content: space-between;
-    width: 40%;
+    width: 50%;
 }
 
-p, h2 {
+p, h2, ul {
     width: 50%;
     height: 20px;
     border: 3px solid purple;
@@ -22,7 +22,13 @@ p, h2 {
     margin: 10px;
 }
 
-h2 {
+h2, ul {
     height: fit-content;
     margin: 5px;
+}
+
+ul {
+    text-align: start;
+    width: 100%;
+    padding-left: 30px;
 }
