--- a/ChooseGoodFoodAngular/src/app/dishes-list/dishes-list.component.html
+++ b/ChooseGoodFoodAngular/src/app/dishes-list/dishes-list.component.html
@@ -10,7 +10,13 @@
           }}
         </button>
       </div>
-      <input appInput class="search-bar" placeholder="Szukaj..."/>
+      <input 
+        appInput 
+        class="search-bar"
+        placeholder="Szukaj..."
+        [(ngModel)]="searchPhrase"
+        (ngModelChange)="onInputChange()"
+      />
       <div class="button">
         <button appButton mode="dark" (click)="onSort()">Sortuj</button>
       </div>
